--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,20 @@
 .mcuxpressoide_packages_support
 FreeRTOS_TAD_logs
 
+Debug
+
 #Mac
 .DS_Store
 
-Debug
+# Ignore Xcode user-related files
+xcuserdata/
+
+# Ignore AppCode user-related files
+.idea/
+
+# Ignore CocoaPods installed files
+Pods/
+
+# Ignore Carthage installed files
+Carthage/
+
